--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,11 @@ th {
 }
 
 .solution,
-.discussion {
+.discussion,
+.issue {
     padding: 20px;
 }
-.issue {
-    padding: 20px 10px;
-}
+
 
 .solution:before,
 .discussion:before {
